--- a/JS_training/lab_kitchen_sink/index.html
+++ b/JS_training/lab_kitchen_sink/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="">
-    <title>Document</title>
+    <title>sadfasdfasdf</title>
 </head>
 <body>
     <script src="app.js"></script>
