--- a/DOM/99lines_of_code_part2/index.html
+++ b/DOM/99lines_of_code_part2/index.html
@@ -6,18 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>99 Lines of Code In The File</title>
     <link rel="stylesheet" href="style.css">
+    <script src="app.js"></script>
 </head>
 <body>
-    <script src="app.js"></script>
     <h1>My singing friends</h1>
-    <div class="friend">
-        <h3>Friend</h3>
-        <p>Test1</p>
-        <p>Test2</p>
-        <p>Test3</p>
-        <p>Test4</p>
-        <p>Test5</p>
-
+    <div>
+        <button id="sing">Sing!</button>
     </div>
  
 
